--- a/Scripts/SongRequest/UI_Config.json
+++ b/Scripts/SongRequest/UI_Config.json
@@ -14,7 +14,7 @@
         "min": 1,
         "max": 100,
         "ticks": 1,
-        "label": "Add Song Request Command Cooldown (seconds)",
+        "label": "Add Song Request Command Cooldown (In Seconds)",
         "tooltip": "How long the Add Song Request command should go on cooldown for.",
         "group": "Setup"
     },
@@ -31,7 +31,7 @@
         "min": 1,
         "max": 100,
         "ticks": 1,
-        "label": "Cancel Song Request Command Cooldown (seconds)",
+        "label": "Cancel Song Request Command Cooldown (In Seconds)",
         "tooltip": "How long the Cancel Song Request command should go on cooldown for.",
         "group": "Setup"
     },
@@ -48,7 +48,7 @@
         "min": 1,
         "max": 100,
         "ticks": 1,
-        "label": "Approve Song Request Command Cooldown (seconds)",
+        "label": "Approve Song Request Command Cooldown (In Seconds)",
         "tooltip": "How long the Approve Song Request command should go on cooldown for.",
         "group": "Setup"
     },
@@ -65,7 +65,7 @@
         "min": 1,
         "max": 100,
         "ticks": 1,
-        "label": "Reject Song Request Command Cooldown (seconds)",
+        "label": "Reject Song Request Command Cooldown (In Seconds)",
         "tooltip": "How long the Reject Song Request command should go on cooldown for.",
         "group": "Setup"
     },
@@ -82,7 +82,7 @@
         "min": 1,
         "max": 100,
         "ticks": 1,
-        "label": "Get Song Request Command Cooldown (seconds)",
+        "label": "Get Song Request Command Cooldown (In Seconds)",
         "tooltip": "How long the Get Song Request command should go on cooldown for.",
         "group": "Setup"
     },
@@ -99,8 +99,25 @@
         "min": 1,
         "max": 100,
         "ticks": 1,
-        "label": "Change Option For Song Request Command Cooldown (seconds)",
+        "label": "Change Option For Song Request Command Cooldown (In Seconds)",
         "tooltip": "How long the Change Option For Song Request command should go on cooldown for.",
+        "group": "Setup"
+    },
+    "CommandSkipSongRequest": {
+        "type": "textbox",
+        "value": "!sr_skip",
+        "label": "Skip Song Request Command",
+        "tooltip": "The command that will be used to skip current song.",
+        "group": "Setup"
+    },
+    "CommandSkipSongRequestCooldown": {
+        "type": "slider",
+        "value": 1,
+        "min": 1,
+        "max": 100,
+        "ticks": 1,
+        "label": "Change Option For Skip Song Request Command Cooldown (In Seconds)",
+        "tooltip": "How long the Change Option For Skip Song Request command should go on cooldown for.",
         "group": "Setup"
     },
     "HttpPageLinkToParse": {
@@ -239,6 +256,20 @@
         "value": "ui-pnotify-text",
         "label": "Class Name Of Notification Description",
         "tooltip": "Class name of notification description on song request page to parse and process result.",
+        "group": "Parsing"
+    },
+    "ElementIdOfSkipSongButton": {
+        "type": "textbox",
+        "value": "playerSkip",
+        "label": "Element ID Of Skip Song Button",
+        "tooltip": "Element ID of skip song button on song request page.",
+        "group": "Parsing"
+    },
+    "ElementIdOfRemoveQueueSongButton": {
+        "type": "textbox",
+        "value": "queueRemove",
+        "label": "Element ID Of Remove Queue Song Button",
+        "tooltip": "Element ID of remove queue button on song request page.",
         "group": "Parsing"
     },
 
@@ -446,6 +477,34 @@
         "value": "{0}, command processing is disabled for this script.",
         "label": "Command Processing Disabled Message",
         "tooltip": "The message that will be sent to chat when command processing is disabled. 0 — user name.",
+        "group": "Chat Messages"
+    },
+    "SkipAllSongRequestsMessage": {
+        "type": "textbox",
+        "value": "{0}, all song requests were skipped.",
+        "label": "Command Skip All Song Request Success Message",
+        "tooltip": "The message that will be sent to chat when skip command skips all songs. 0 — user name.",
+        "group": "Chat Messages"
+    },
+    "SkipCurrentSongRequestMessage": {
+        "type": "textbox",
+        "value": "{0}, current song requests was skipped.",
+        "label": "Command Skip Current Song Request Success Message",
+        "tooltip": "The message that will be sent to chat when skip command skips only current song. 0 — user name.",
+        "group": "Chat Messages"
+    },
+    "NoSongRequestsToSkipMessage": {
+        "type": "textbox",
+        "value": "No songs in playlist available to skip.",
+        "label": "No Song Requests To Skip Message",
+        "tooltip": "The message that will be sent to chat when skip command cannot be used because playlist is empty.",
+        "group": "Chat Messages"
+    },
+    "FailedToSkipSongRequestsMessage": {
+        "type": "textbox",
+        "value": "{0}, failed to skip song requests: {1}",
+        "label": "Command Skip Song Request Failure Message",
+        "tooltip": "The message that will be sent to chat when skip command failed. 0 — user name, 1 — error description.",
         "group": "Chat Messages"
     },
 
