--- a/Scripts/SongRequest/UI_Config.json
+++ b/Scripts/SongRequest/UI_Config.json
@@ -446,23 +446,37 @@
     },
     "OptionValueTheSameMessage": {
         "type": "textbox",
-        "value": "Option {0} value cannot be changed to the same value {1}",
+        "value": "{0}, option {1} value cannot be changed to the same value {2}",
         "label": "On Changing Option Value To The Same Message",
-        "tooltip": "The message that will be sent to chat when user tries to change option value to the same value. 0 — option name, 1 — current option value.",
+        "tooltip": "The message that will be sent to chat when user tries to change option value to the same value. 0 — user name, 1 — option name, 2 — current option value.",
         "group": "Chat Messages"
     },
     "OptionValueChangedMessage": {
         "type": "textbox",
-        "value": "Option {0} value has been changed from {1} to {2}",
+        "value": "{0}, option {1} value has been changed from {2} to {3}",
         "label": "On Changing Option Value To New Value Message",
-        "tooltip": "The message that will be sent to chat when user changes settings option. 0 — option name, 1 — old option value, 1 — new option value.",
+        "tooltip": "The message that will be sent to chat when user changes settings option. 0 — user name, 1 — option name, 2 — old option value, 3 — new option value.",
         "group": "Chat Messages"
     },
     "FailedToSetOptionMessage": {
         "type": "textbox",
-        "value": "Failed to change option {0}: {1}",
+        "value": "{0}, failed to change option {1}: {2}",
         "label": "On Failed To Change Option Value Message",
-        "tooltip": "The message that will be sent to chat when settings option cannot be changed. 0 — option name, 1 — error description.",
+        "tooltip": "The message that will be sent to chat when settings option cannot be changed. 0 — user name, 1 — option name, 2 — error description.",
+        "group": "Chat Messages"
+    },
+    "FailedToSetOptionInvalidTypeMessage": {
+        "type": "textbox",
+        "value": "invalid type (expected: {0})",
+        "label": "On Failed To Change Option Due To Invalid Type Message",
+        "tooltip": "The message that will be sent to chat when settings option cannot be changed due to invalid type. 0 — expected type.",
+        "group": "Chat Messages"
+    },
+    "FailedToSetOptionInvalidNameMessage": {
+        "type": "textbox",
+        "value": "invalid option name",
+        "label": "On Failed To Change Option Due To Invalid Name Message",
+        "tooltip": "The message that will be sent to chat when settings option cannot be changed due to invalid name.",
         "group": "Chat Messages"
     },
     "FailedToValidateLinkMessage": {
